# powershell-commands-wrapper

./: CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  zizmor.yml
src/powershell/: __init__.py
tests/: conftest.py  test_run.py
tests/__snapshots__/: test_run.ambr
