[project]
name = "powershell-commands-wrapper"
version = "0.1.0"
description = "Wrapper around subprocess to execute powershell commands locally from python code and retrieve its result"
readme = "README.md"
authors = [
    { name = "Nuabee team", email = "contact@nuabee.fr" }
]
requires-python = ">=3.11"
dependencies = [
]

[dependency-groups]
dev = [
    "syrupy>=5.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/powershell"]


