[project]
name = "powershell-commands-wrapper"
version = "0.1.0"
description = "Wrapper around subprocess to execute powershell commands locally from python code and retrieve its result"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Nuabee team", email = "contact@nuabee.fr" }
]
keywords = ["powershell", "windows", "automation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
]

[project.urls]
Repository = "https://github.com/Nuabee-Team/powershell-commands-wrapper"

[dependency-groups]
dev = [
    "syrupy>=5.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/powershell"]


